@@ -1,3 +1,8 @@
+bloonix-heaven (0.5) released at 2014-XX-XX
+
+    * Fixed collection process size statistics. /proc/$pid/statm
+      is not available on other operation systems.
+
 bloonix-heaven (0.4) released at 2014-11-03
 
     * Updated the license information.
